Base/objects/Associate__c/fields/Release_Reason__c.field-meta.xml
<CustomField>
    <fullName>Release_Reason__c</fullName>
    <label>Release Reason</label>
    <type>TextArea</type>
</CustomField>